--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,8 +19,7 @@ jobs:
     - name: Install dependencies # Installs Node.js and your project dependencies
       uses: actions/setup-node@v2
       with:
-        node-version: '14'
-    # Replace '14' with the Node.js version you're using in your project
+        node-version: '16' # Replace '16' with the Node.js version you're using in your project
 
     - name: Install dependencies # Installs all the packages listed in package.json
       run: npm install
