--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
       run: npm install
 
     - name: Build and export the app # Builds and exports the Next.js app to a directory called 'out'
-      run: npm run build && npm run export
+      run: npm run build && npm run export && touch ./out/.nojekyll
 
     - name: Deploy to GitHub Pages # Deploys the 'out' directory to the 'gh-pages' branch
       uses: JamesIves/github-pages-deploy-action@4.1.3
